--- a/apcs_20230415_jupyter/Ch1.ipynb
+++ b/apcs_20230415_jupyter/Ch1.ipynb
@@ -456,8 +456,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ceacf910",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "數字1:12\n",
+      "數字2:25\n",
+      "<class 'str'>\n",
+      "37\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = input(\"數字1:\")\n",
+    "n2 = input(\"數字2:\")\n",
+    "print(type(n1))\n",
+    "print(int(n1) + int(n2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb8ef3ec",
    "metadata": {},
    "outputs": [],
    "source": []
